--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
 body {
   font-family: "IBM Plex Mono", sans-serif;
   background-color: #f7f7f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 h1 {
